--- a/index.html
+++ b/index.html
@@ -99,8 +99,20 @@ https://templatemo.com/tm-552-video-catalog
                                 </a>
                             </div>    
                             <div class="p-4 tm-bg-gray tm-catalog-item-description">
-                                <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Don Don Don - Play & Win</h3>
-                                <p class="tm-catalog-item-text">Don Don Don is an attractive Play & Win feature inside My Ooredoo App (MOA). It’s even more attractive with the amazing double data benefits. Don Don Don packages now offer “Double Data” for the same price with its continuous data bonuses to win up to 200 GB.
+                                <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Football - Play & Win</h3>
+                                <p class="tm-catalog-item-text">
+                                    Engage your users with this exciting game of football penalty shootout in your OPCO.
+
+                                    Customize the players and make them look like Messi, Ronaldo, or the favorite player in your country.
+
+                                    You can customize the Goalie or the Player.
+                                    You can also customize the background stadium screens.
+                                    Change the Name & Music also.
+
+
+                                    Its ready for delivery and customization to your requirement will take appx 7 days.
+
+                                    So if you want to add this gamification to your App or product purchase journey - drop us an email and we will make it available for you.
                                 </p>
                             </div>
                          </div>
