--- a/index.html
+++ b/index.html
@@ -102,16 +102,18 @@ https://templatemo.com/tm-552-video-catalog
                                 <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Football - Play & Win</h3>
                                 <p class="tm-catalog-item-text">
                                     Engage your users with this exciting game of football penalty shootout in your OPCO.
-
+                                </p>
+                                <p class="tm-catalog-item-text">
                                     Customize the players and make them look like Messi, Ronaldo, or the favorite player in your country.
-
+                                </p>
+                                <p class="tm-catalog-item-text">
                                     You can customize the Goalie or the Player.
                                     You can also customize the background stadium screens.
                                     Change the Name & Music also.
-
-
+                                </p>
+                                <p class="tm-catalog-item-text">
                                     Its ready for delivery and customization to your requirement will take appx 7 days.
-
+                                <br>
                                     So if you want to add this gamification to your App or product purchase journey - drop us an email and we will make it available for you.
                                 </p>
                             </div>
