--- a/index.html
+++ b/index.html
@@ -172,24 +172,19 @@ https://templatemo.com/tm-552-video-catalog
                                 </a>
                             </div>                            
                             <div class="p-4 tm-bg-gray tm-catalog-item-description">
-                                 <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Football - Play & Win</h3>
+                                 <h3 class="tm-text-primary mb-3 tm-catalog-item-title">MOA - X - The Super App>
                                 <p class="tm-catalog-item-text">
-                                    Engage your users with this exciting game of football penalty shootout in your OPCO.
+                                    We are building the next generation super app and why don't you join us in building that.
                                 <br>
-                                    Customize the players and make them look like Messi, Ronaldo, or the favorite player in your country.
+                                    MOA X will be a  telco app + WhatsApp + Music + Video + Gaming Arcade + Mobile Money + Digital Commerce + AI Bots all combined in one.
                                 </p>
                                 <p class="tm-catalog-item-text">
-                                    You can customize the Goalie or the Player.
-                                    <br>
-                                    You can also customize the background stadium screens.
-                                    <br>
-                                    Change the Name & Music also.
+                                    Together we can build the app for you also with your own customization and your own control panel in your own regional language. 
                                 </p>
                                 <p class="tm-catalog-item-text">
-                                    Its ready for delivery and customization to your requirement will take appx 7 days.
-                                <br>
-                                    So if you want to add this gamification to your App or product purchase journey - drop us an email and we will make it available for you.
-                                </p>
+                                    So if you are interested in building along with us, let us know.
+                                    We can drive economies of scale and build together at the fraction of the cost we are paying currently while building separate apps.
+                               </p>
                             </div>
                         </div>
                             
@@ -205,24 +200,19 @@ https://templatemo.com/tm-552-video-catalog
                                 </a>
                             </div>    
                             <div class="p-4 tm-bg-gray tm-catalog-item-description">
-                                 <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Football - Play & Win</h3>
+                                 <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Mobile Money</h3>
                                 <p class="tm-catalog-item-text">
-                                    Engage your users with this exciting game of football penalty shootout in your OPCO.
+                                    We have created a world-class UI/UX and backend middleware to seamlessly integrate into any mobile money platform
                                 <br>
-                                    Customize the players and make them look like Messi, Ronaldo, or the favorite player in your country.
+                                    This new mobile money app design is world-class, faster, responsive and your customers will love it
                                 </p>
                                 <p class="tm-catalog-item-text">
-                                    You can customize the Goalie or the Player.
-                                    <br>
-                                    You can also customize the background stadium screens.
-                                    <br>
-                                    Change the Name & Music also.
+                                    It opens in a flash, ensures transactions are carried out 99.999% of the time and will win you market share and users in your OPCO
                                 </p>
                                 <p class="tm-catalog-item-text">
-                                    Its ready for delivery and customization to your requirement will take appx 7 days.
-                                <br>
-                                    So if you want to add this gamification to your App or product purchase journey - drop us an email and we will make it available for you.
-                                </p>
+                                    Will u like us to build this for you too?
+                                    Drop us a mail and we are happy to build this together
+                                   </p>
                             </div>
                         </div>
                       
@@ -237,23 +227,25 @@ https://templatemo.com/tm-552-video-catalog
                                 </a>
                             </div>
                             <div class="p-4 tm-bg-gray tm-catalog-item-description">
-                                <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Football - Play & Win</h3>
+                                <h3 class="tm-text-primary mb-3 tm-catalog-item-title">OCR Software</h3>
                                 <p class="tm-catalog-item-text">
-                                    Engage your users with this exciting game of football penalty shootout in your OPCO.
-                                <br>
-                                    Customize the players and make them look like Messi, Ronaldo, or the favorite player in your country.
+                                    We have built our own OCR software and we can easily add your OPCO language to it and you can use this software now for all your scanning needs. 
                                 </p>
                                 <p class="tm-catalog-item-text">
-                                    You can customize the Goalie or the Player.
+                                    Whether it is:-
+                                    Voucher Scan
+                                      or
                                     <br>
-                                    You can also customize the background stadium screens.
+                                         National ID registration Scan
+                                       or
                                     <br>
-                                    Change the Name & Music also.
+                                        Any other scan
+                                    <br>
                                 </p>
                                 <p class="tm-catalog-item-text">
-                                    Its ready for delivery and customization to your requirement will take appx 7 days.
-                                <br>
-                                    So if you want to add this gamification to your App or product purchase journey - drop us an email and we will make it available for you.
+                                    our OCR scanning software can easily meet your needs.
+                                    <br>
+                                    Drop us a note if you will like to use it.
                                 </p>
                             </div>
                         </div>
@@ -269,7 +261,7 @@ https://templatemo.com/tm-552-video-catalog
                                 </a>
                             </div>                            
                             <div class="p-4 tm-bg-gray tm-catalog-item-description">
-                                <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Football - Play & Win</h3>
+                                <h3 class="tm-text-primary mb-3 tm-catalog-item-title">GAMING ARCADE??</h3>
                                 <p class="tm-catalog-item-text">
                                     Engage your users with this exciting game of football penalty shootout in your OPCO.
                                 <br>
