--- a/video-page1.html
+++ b/video-page1.html
@@ -85,11 +85,23 @@ https://templatemo.com/tm-552-video-catalog
 						<div class="col-xl-8 col-lg-7">
 							<!-- Video description -->
 							<div class="tm-video-description-box">
-								<h2 class="mb-5 tm-video-title">Don Don Don - Play & Win</h2>
-								<p class="mb-4">Don Don Don is an attractive Play & Win feature inside My Ooredoo App (MOA). It’s even more attractive with the amazing double data benefits. Don Don Don packages now offer “Double Data” for the same price with its continuous data bonuses to win up to 200 GB.
-                                        Don Don Don Double Data Packs are available on My Ooredoo app together with its fun game which the customers can try to win up to 200GB with any purchase of the eligible packs.</p>
-								<p class="mb-4">Ooredoo users can choose among 3 special packs to enjoy their double data benefits:  2GB (1GB + 1GB) for 999Ks, 8GB (4GB + 4GB) for 2999Ks and play football game to win up to 200GB data bonus. They can also buy 1600 MB (800 MB+ 800MB) for 899 Ks and try on the game to win up to 100GB. </p>
-								<p class="mb-4">Don Don Don Data prizes will be instantly credit to the winner’s mobile. Data packs are valid for 30 days and unused data can be carried forward with any new data pack purchase. Visit Ooredoo Myanmar Website www.ooredoo.com.mm for detailed information of various offers.</p>	
+								<h2 class="mb-5 tm-video-title">Football - Play & Win</h2>
+								<p class="mb-4">
+									Is attractive and very successful gamification of the pack purchase journey in My Ooredoo App. 
+
+									Behind this gamification runs a complex algorithm that is able to reward users basis their segment, AoN, and ARPU thereby maximizing returns per user and also giving them the excitement of winning something.
+
+									This game has been very successful in Myanmar and has universal appeal because it is football. Anyone can play, enjoy and win.
+
+									The complete package consists of the following
+									The Entire Game (HTML)
+									The Probability logic
+									The algorithm for Mega Rewards
+									Graphics aligned to your requirement
+									Changes of the Goalie and the Player
+
+									This game can be easily connected to your existing app and you can go live in no time. So what are you waiting for? Drop us a note and we will enable this for you !!
+								</p>
 							</div>							
 						</div>
 						<div class="col-xl-4 col-lg-5">
