--- a/video-page2.html
+++ b/video-page2.html
@@ -87,10 +87,34 @@ https://templatemo.com/tm-552-video-catalog
 							<!-- Video description -->
 							<div class="tm-video-description-box">
 								<h2 class="mb-5 tm-video-title">Omanji - Play & Win</h2>
-								<p class="mb-4">Omanji is an amazing In-app gaming concept for My Ooredoo App which will engage customers to play and win attractive prizes. The game takes the customers to an adventurous journey into the Jungle and find seven hidden gems of Myanmar in a series of flip & win games.</p>
-                                        <p class="mb-4">Customers can play total of 7 levels to win big prizes. Each level will come up with attractive prizes and data based on the customers’ performance. To play each level, customer will have to purchase a data pack. </p>
-								<p class="mb-4">The concept map of the Omanji is another creative idea. Each precious gems are hidden in the different landscapes of Myanmar (the Map itself), from seashores to the mountains. Only the right techniques to extract each stones will get customers all the seven prizes.</p>
-								<p class="mb-4">This gaming concept seems to be an innovative feature for a Telecom Mobile App and Ooredoo Myanmar expects a significant impact on Digital revenue through this new feature.</p>	
+								<p class="mb-4">
+									When Ooredoo Meets Jumanji — Oomanji is created.
+
+									Oomanji is a 7 step journey to find treasure across the map of your country. In Myanmar, the user has to travel the entire country and find 7 gems located across the various location, and at each level, he wins prizes.
+
+									Behind this gamification runs a complex algorithm that is able to reward users basis their segment, AoN, and ARPU thereby maximizing returns per user and also giving them the excitement of winning something.
+
+									The game is based on human physiology of “Let me play again, maybe I am lucky this time”.
+
+									Oomanji can be customized to your country with your country map. The gems can be changed to anything that is specific to your country and the user can be asked to collect those gems or items.
+
+									You can also increase the 7 steps to 10 steps or decide to decrease it to 5 steps. It's all your call.
+
+									The music can be customized and the parrot can be changed to a national bird of your country or any other preferred animal
+
+									The creatives are already ready. TVC is also available for you to customize and the music can be recorded in your language.
+
+									The complete package consists of the following
+									The Entire Game (HTML)
+									The Probability logic
+									The algorithm for Mega Rewards
+									Graphics aligned to your requirement
+									Changes to the music, map, content, etc
+
+									So if you want a single game that can uplift your brand, engage users, drive revenue - then Oomanji is the answer.
+
+									Integration is with APIs and we can go live in 10 days. Let us know if you will like to launch this in your country.
+								</p>
 							</div>							
 						</div>
 						<div class="col-xl-4 col-lg-5">
