--- a/video-page3.html
+++ b/video-page3.html
@@ -84,9 +84,20 @@ https://templatemo.com/tm-552-video-catalog
 							<!-- Video description -->
 							<div class="tm-video-description-box">
 								<h2 class="mb-5 tm-video-title">MOA X - New Version of My Ooredoo App</h2>
-								<p class="mb-4">Ooredoo aspires to bring the digital experience for Myanmar telecom customers at its best. Self-service is one of the key portfolio for any Telecom operators. Keeping this in mind, Digital team of Ooredoo Myanmar is going to introduce MOA X, the new version of My Ooredoo App with completely new redesigned version focusing best user experience.</p>
-                                        <p class="mb-4">MOA X comes up with a 360 degree experience for the Ooredoo customers, from basic self-service to optimum level of entertainment. Customers can perform almost all kinds of basic operations of Ooredoo, and will enjoy the entertainment through Gaming, Music, Video, Movies, etc.</p>
-								<p class="mb-4">MOA X would be one of the biggest leaps for Ooredoo Myanmar Digital products and it aspires to bring a significant different across all Ooredoo customer base.</p>
+								<p class="mb-4">
+									We are building the next generation super app and why don't you join us in building that
+
+									MOA X will be telco app + WhatsApp + Music + Video + Gaming Arcade + Mobile Money + Digital Commerce + AI Bots all combined in one.
+
+									MOA X comes up with a 360-degree experience for Ooredoo customers, from basic self-service to an optimum level of entertainment. Customers can perform almost all kinds of basic operations of Ooredoo, and will enjoy the entertainment through Gaming, Music, Video, Movies, etc., and buy digital goods and do mobile money transactions from the comfort of their homes.
+
+									We will have multiple language options, multiple customization options through an OPCO control panel and we can also customize certain features to suit your region.
+
+									We build for you, but the control always remains with you. You decide what feature you want to enable, what ads you want to run, and what takes priority over others.
+
+									If interested pl drop us a mail !!
+									We will love to build this with you and your OPCO.
+								</p>
 							</div>							
 						</div>
 						<div class="col-xl-4 col-lg-5">
