--- a/video-page4.html
+++ b/video-page4.html
@@ -86,9 +86,24 @@ https://templatemo.com/tm-552-video-catalog
 						<div class="col-xl-8 col-lg-7">
 							<!-- Video description -->
 							<div class="tm-video-description-box">
-								<h2 class="mb-5 tm-video-title">Mobile Money – Mpitesan</h2>
-								<p class="mb-4">The new Mpitesan is the Ooredoo Myanmar’s Mobile Money application that brings the simplified and efficient mobile money experience for Ooredoo Customers.</p>
-                                        <p class="mb-4">Mpitesan is one of the finest Mobile Money Apps in all Myanmar Market that meets almost all kinds of the digital wallet based needs for the customers, including Cash-in, Send Money, Cash Out, Bill Payment, and other necessary needs.</p>
+								<h2 class="mb-5 tm-video-title">Mobile Money</h2>
+								<p class="mb-4">
+								The new Mpitesan is Ooredoo Myanmar’s Mobile Money application that brings a simplified and efficient mobile money experience for Ooredoo Customers.
+								Mpitesan is one of the finest Mobile Money Apps in the Myanmar Market that meets almost all kinds of digital wallet-based needs for the customers, including Cash-in, Send Money, Cash Out, Bill Payment, and other necessary needs.
+								We are building this on a modular platform with seamless plug and play capability.
+								It has some great new features like
+								Lending
+								Remittance
+								Ecommerce
+								Games
+								Loyalty
+								Digital Marketplace
+								Share wallet
+
+								We have already completed the prototype and we can integrate it with any mobile money platform using the advanced API integration module we are building in this app.
+
+								Drop us a note and let's build this together.
+								And then we can even offer international money transfer features to our customers between our  OPCOs.
 							</div>							
 						</div>
 						<div class="col-xl-4 col-lg-5">
