--- a/video-page3.html
+++ b/video-page3.html
@@ -83,7 +83,7 @@ https://templatemo.com/tm-552-video-catalog
 						<div class="col-xl-8 col-lg-7">
 							<!-- Video description -->
 							<div class="tm-video-description-box">
-								<h2 class="mb-5 tm-video-title">MOA X - New Version of My Ooredoo App</h2>
+								<h2 class="mb-5 tm-video-title">MOA X - The Super App </h2>
 								<p class="mb-4">
 									We are building the next generation super app and why don't you join us in building that
 
