--- a/video-page5.html
+++ b/video-page5.html
@@ -86,10 +86,18 @@ https://templatemo.com/tm-552-video-catalog
 						<div class="col-xl-8 col-lg-7">
 							<!-- Video description -->
 							<div class="tm-video-description-box">
-								<h2 class="mb-5 tm-video-title">Voucher Scan</h2>
-								<p class="mb-4">To make the Top up easier and efficient, Ooredoo brings the Voucher Scan feature for My Ooredoo App customers. Customers can now scan the QR from the Top Up voucher and can top up in seconds.</p>
-                                        <p class="mb-4">To Scan a voucher, customers need to peel off the security level from the Ooredoo top up voucher and scan the QR by going to My Ooredoo App. The top up immediately reflects into the main account balance right after scanning the voucher. </p>
-								<p class="mb-4">In case customers face any difficulty or error, they can immediate seek for help through My Ooredoo App or Ooredoo customer service hotline.</p>	
+								<h2 class="mb-5 tm-video-title">OCR Software</h2>
+								<p class="mb-4">Our OCR software has been built to handle one of the most difficult languages in the world - Burmese !!
+									We had no library of fonts, non-standard characters and yet we have built one of the best performing OCR software. 
+									We can customize this to your OPCO language easily and now you can allow SCAN QR
+									SCAN TOP-UP
+									SCAN ID 
+									SCAN PHOTO
+									features to your customers at the fraction of the cost.
+									Let us know if you will like to use our OCR in your OPCO.
+									We will be very glad to assist.
+																	
+								</p>
 							</div>							
 						</div>
 						<div class="col-xl-4 col-lg-5">
