--- a/video-page6.html
+++ b/video-page6.html
@@ -86,8 +86,17 @@ https://templatemo.com/tm-552-video-catalog
 						<div class="col-xl-8 col-lg-7">
 							<!-- Video description -->
 							<div class="tm-video-description-box">
-								<h2 class="mb-5 tm-video-title">Gaming Arcade</h2>
-								<p class="mb-4">To take the digital experience in the next level, Gaming Arcade will be launched inside My Ooredoo App new version. Customers can play and enjoy exciting Arcade games to get the best entertainment facilities out of MOA App.</p>
+								<h2 class="mb-5 tm-video-title">Gaming Arcade & O-Coins</h2>
+								<p class="mb-4">
+									Gaming is now one of the top casual activities customers do on their phones and is one of the most engaging mediums you can use.
+
+									its a multimillion-dollar industry and mobile phone is the primary divide used to play these games.
+									It is a no-brainer that Ooredoo as a mobile service provider should encash this opportunity and provide its users a seamless gaming experience.
+									To do this we have launched Gaming Arcade with our own currency O-Coins (Ooredoo Coins)
+									These coins can be used to buy gaming credits, redeem for telecom service and also buy goods from participating merchants
+
+									Will you like to add gaming arcade and O-Coins to your portfolio?
+									Let us know .. drop us a mail
 							</div>							
 						</div>
 						<div class="col-xl-4 col-lg-5">
