--- a/index.html
+++ b/index.html
@@ -261,24 +261,15 @@ https://templatemo.com/tm-552-video-catalog
                                 </a>
                             </div>                            
                             <div class="p-4 tm-bg-gray tm-catalog-item-description">
-                                <h3 class="tm-text-primary mb-3 tm-catalog-item-title">GAMING ARCADE??</h3>
+                                <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Gaming Arcade and O-Coins</h3>
                                 <p class="tm-catalog-item-text">
-                                    Engage your users with this exciting game of football penalty shootout in your OPCO.
-                                <br>
-                                    Customize the players and make them look like Messi, Ronaldo, or the favorite player in your country.
-                                </p>
+                                   Gaming is now one of the top casual activities customers do on their phones and is one of the most engaging mediums you can use.
+                                    We have launched a gaming arcade inside MOA and with it, we have launched OCoins (Ooredoo Coins).
+                                    Our customers can play and enjoy games, win battles and prizes and engage more with our brand and earn O-Coins too!
+                                 </p>
                                 <p class="tm-catalog-item-text">
-                                    You can customize the Goalie or the Player.
-                                    <br>
-                                    You can also customize the background stadium screens.
-                                    <br>
-                                    Change the Name & Music also.
-                                </p>
-                                <p class="tm-catalog-item-text">
-                                    Its ready for delivery and customization to your requirement will take appx 7 days.
-                                <br>
-                                    So if you want to add this gamification to your App or product purchase journey - drop us an email and we will make it available for you.
-                                </p>
+                                    If you will like us to extend this arcade to your OPCO, drop us a note.
+                                   </p>
                             </div>
                         </div>
 
